k8s-gitops/base/ingress/app-ingress.yaml
# Copyright (c) 2025 https://github.com/rasmabayu. All rights reserved.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: demo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-app
            port:
              number: 80
